App/css/bubble_chart.css
a, a:visited, a:active {
  color: #444;
}

.bubblechartcontainer {
  margin: 40px;
}

#vis {
  clear: both;
  margin-bottom: 10px;
}

#bubblecharttoolbar {
  margin-top: 10px;
}

.xAxisTitle {
  font-size: 19px;
  fill: #444 ;
  cursor: default;
}

.yAxisTitle {
  font-size: 19px;
  fill: #444;
  cursor: default;
}

.tooltip {
	position: absolute;
	top: 100px;
	left: 100px;
  -moz-border-radius:5px;
	border-radius: 5px;
  border: 2px solid #000;
  background: #fff;
	opacity: .9;
  color: black;
	padding: 10px;
	width: 300px;
	font-size: 12px;
	z-index: 10;
}

.tooltip .title {
	font-size: 13px;
}

.tooltip .name {
  font-weight:bold;
}

.footer {
  text-align: center;
}

/*! Buttons*/

